@@ -13,6 +13,7 @@ version 2.5.5 (??/??/????):
 	* Fix retrieval of ICQ status messages from users of ICQ 6.x, Miranda,
 	  and other libpurple clients (fixes with libpurple users only on
 	  statuses other than Available). (Daniel Ljungborg)
+	* Fix a memory leak in SILC. (Luke Petre)
 
 	Finch:
 	* Allow rebinding keys to change the focused widget (details in the
